Codigo cabeçalho feito

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/normalize.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Onix Digital Marketing</title>
 </head>
 <body>
-    
+    <header class="cabeçalho">
+        <div class="img">
+            <img src="./assets/img/logo.png" alt="logotipo" class="logo">
+        </div>
+        <nav>
+            <ul>
+                <li class="item">Home</li>
+                <li class="item">Services</li>
+                <li class="item">About</li>
+                <li class="item">Portfolio</li>
+                <li class="item">Videos</li>
+                <li class="item">Contact Us</li>
+            </ul>
+        </nav>
+        <div class="btn">
+            <button class="botao-header">Contact Us Now</button>
+        </div>
+        <div class="change-color">
+            <a href="#"><img src="#" alt="change site color theme" class="a-change-color"></a>
+        </div>
+    </header>
 </body>
 </html>
