--- a/index.html
+++ b/index.html
@@ -7,31 +7,55 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Onix Digital Marketing</title>
 </head>
 <body>
-    <header class="cabeçalho">
-        <div class="img">
-            <img src="./assets/img/logo.png" alt="logotipo" class="logo">
-        </div>
-        <nav>
-            <ul>
-                <li class="item">Home</li>
-                <li class="item">Services</li>
-                <li class="item">About</li>
-                <li class="item">Portfolio</li>
-                <li class="item">Videos</li>
-                <li class="item">Contact Us</li>
-            </ul>
-        </nav>
-        <div class="btn">
-            <button class="botao-header">Contact Us Now</button>
-        </div>
-        <div class="change-color">
-            <a href="#"><img src="#" alt="change site color theme" class="a-change-color"></a>
-        </div>
+    <header>
+        <section class="cabeçalho">
+            <div class="img">
+                <img src="./assets/img/logo.png" alt="logotipo" class="logo">
+            </div>
+            <nav>
+                <ul class="navegaçao">
+                    <li class="itemactive">Home</li>
+                    <li class="item">Services</li>
+                    <li class="item">About</li>
+                    <li class="item">Portfolio</li>
+                    <li class="item">Videos</li>
+                </ul>
+            </nav>
+            <div class="btn">
+                <button class="botao-header">Contact Us Now</button>
+            </div>
+            <div class="change-color">
+                <img src="./assets/img/change-color.png" alt="change site color theme" class="a-change-color">
+            </div>
+        </section>
     </header>
+    <main>
+        <section class="principal">
+            <div class="left">
+                <div class="texto">
+                    <div class="titulo-1">
+                        <h4>Online Marketing</h4>
+                    </div>
+                    <div class="titulo-principal">
+                        <h1>Get the <span class="rosa">best ideas</span> for your <span class="azul">website</span></h1>
+                    </div>
+                    <div class="encerramento">
+
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <img src="./assets/img/banner-right-image.png" alt="" class="right">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
