--- a/index.html
+++ b/index.html
@@ -115,10 +115,46 @@
         </section>
         <section class="services-container">
             <div class="services-back">
-
+                
             </div>
-            <div class="services-back-right">
-
+            <div class="tools-titulo">
+                <h2>Select A Suitable <span class="azul">Plan</span> For Your Next <span class="rosa">Projects</span></h2>
+                <h2><span class="rosa">Our Plans</span></h2>
+            </div>
+            <div class="plans">
+                <div class="plan">
+                    <h4 class="plan-title">Starter Plan</h4>
+                    <h2 class="preço">R$140</h2>
+                    <ul class="caract">
+                        <li class="caract-plan">10 Projects</li>
+                        <li class="caract-plan">100 GB space</li>
+                        <li class="caract-plan">20 SEO checkups</li>
+                        <li class="caract-plan">Basic Support</li>
+                    </ul>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
+                <div class="plan">
+                    <h4 class="plan-title">Standard Plan</h4>
+                    <h2 class="preço">R$200</h2>
+                    <ul class="caract">
+                        <li class="caract-plan">20 Projects</li>
+                        <li class="caract-plan">200 GB space</li>
+                        <li class="caract-plan">50 SEO checkups</li>
+                        <li class="caract-plan">Pro Support</li>
+                    </ul>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
+                <div class="plan">
+                    <h4 class="plan-title">Advanced Plan</h4>
+                    <h2 class="preço">R$280</h2>
+                    <ul class="caract">
+                        <li class="caract-plan">30 Projects</li>
+                        <li class="caract-plan">300 GB space</li>
+                        <li class="caract-plan">100 SEO checkups</li>
+                        <li class="caract-plan">Best Support</li>
+                    </ul>
+                    <button class="buy-btn">Buy Now</button>
+                </div>
             </div>
         </section>
     </main>
