--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
                 </div>
             </div>
         </section>
+        <footer>
+
+        </footer>
     </main>
 
     <script>
@@ -188,7 +191,13 @@
 
             $('.card-titulo').css("color","#E6E5E3");
 
-            $('p').css("color","#E6E5E3");
+            $('p').css("color","#E6E5E3");   
+
+            $('.plan').css("background","#303134");
+
+            $('.plan-title').css("color","#E6E5E3");
+
+            $('.caract-plan').css("color","#E6E5E3");
         }
 
         $('.change-color-black').on("click",colorlight)
@@ -219,7 +228,13 @@
 
             $('.card-titulo').css("color","#2a2a2a");
 
-            $('p').css("color","#2a2a2a");
+            $('p').css("color","#2a2a2a");   
+
+            $('.plan').css("background","#fff");
+
+            $('.plan-title').css("color","#2a2a2a");
+
+            $('.caract-plan').css("color","#2a2a2a");
 
         }
     </script>
